# nautil-utils

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test.py
.github/workflows/: cd.yml
nautil_us/actions/: __init__.py  archive.py  extract.py  filter.py  json_minify.py  remove_empty.py  touch.py
nautil_us/filter/: __init__.py  dotignore.py  regex.py
nautil_us/source/: __init__.py  local.py
nautil_us/types/: __init__.py
nautil_utils/actions/: archive.py  cp.py  extract.py  filter.py  foreach.py  json_minify.py  json_set.py  keep.py  mkdir.py  move.py  py.py  remove_empty.py  rm.py  touch.py
nautil_utils/filter/: __init__.py  dotignore.py  regex.py
nautil_utils/source/: __init__.py  artifact.py  git.py  local.py
nautil_utils/types/: __init__.py  file_predicate.py
tests/: test_action_foreach.py  test_source_artifact.py  test_source_git.py  test_source_local.py
