[build-system]
requires = ["setuptools>=69", "setuptools-scm[toml]>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nautil-utils"
description = "Nautil-utils is a collection of utilities and tools for the Nautil toolkit."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["plugin", "nautil"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
]

dependencies = [
  "nautil>=1.2.0,<2.0.0",
  "gitdb>=4.0.12,<5.0.0",
  "GitPython>=3.1.46,<4.0.0",
  "smmap>=5.0.3,<6.0.0",
]

dynamic = ["version"]


[tool.setuptools.packages.find]
include = ["nautil_utils*"]

[tool.setuptools_scm]
tag_regex = "^(?P<version>\\d+\\.\\d+\\.\\d+)$"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
fallback_version = "0.0.0"